force-app/main/default/objects/GeneralQuotas__c/GeneralQuotas__c.object-meta.xml
<CustomObject>
    <label>Cota Geral</label>
    <nameField>
        <label>Nome</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cotas Gerais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>