force-app/main/default/objects/GeneralQuotas__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <label>Saldo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>