force-app/main/default/objects/GeneralQuotas__c/fields/PendingDistributionIndividualQuota__c.field-meta.xml
<CustomField>
    <fullName>PendingDistributionIndividualQuota__c</fullName>
    <label>Pendente distribuição (Cota Individual)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>