force-app/main/default/objects/GeneralQuotas__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <inlineHelpText>Atenção: ao selecionar a quantidade, verifique a unidade de medida clicando no produto para que seja disponibilizado a quantidade correta!</inlineHelpText>
    <label>Quantidade</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>