force-app/main/default/objects/GeneralQuotas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cultivate__c</columns>
    <columns>Crop__c</columns>
    <columns>Quantity__c</columns>
    <columns>Balance__c</columns>
    <columns>Consumed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>